--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git rules</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <h1>get by</h1>
+        
+    </body>
 </html>
