--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git rules</title>
 </head>
     <body>
-        <h1>get by</h1>
+        <h1>get by +</h1>
         
     </body>
 </html>
