--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git rules</title>
+
 </head>
     <body>
         <h1>get by +</h1>
+        <a href="https://www.pexels.com/photo/animals-sweet-cat-kitty-57416/">
+            <img src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?w=640" alt="Рыжий кот"
+                width="640" />
+        </a>
         
     </body>
 </html>
