--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
     <body>
-        <h1>get by +</h1>
+        <h1>get by + NIK</h1>
         <a href="https://www.pexels.com/photo/animals-sweet-cat-kitty-57416/">
             <img src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?w=640" alt="Рыжий кот"
                 width="640" />
